--- a/DairyProject/templates/category/view_cart.html
+++ b/DairyProject/templates/category/view_cart.html
@@ -99,7 +99,7 @@
             </div>
             <div class="total-amount" id="total-{{ item.id }}">{{ item.total_amount }}</div>
             <div class="actions">
-                <form action="{% url 'remove_from_cart' item.id %}" method="post">
+                <form action="{% url 'remove_from_cart' cart_id=item.id %}" method="post">
                     {% csrf_token %}
                     <button type="submit" class="btn btn-danger">Remove</button>
                 </form>
