--- a/DairyProject/templates/select.html
+++ b/DairyProject/templates/select.html
@@ -87,6 +87,8 @@
             <a href="{% url 's_register' %}" class="seller-btn">Seller</a>
             <a href="{% url 'c_register' %}" class="customer-btn">Customer</a>
             <a href="{% url 'v_register' %}" class="vet-btn">Veterinarian</a>
+            <a href="{% url 'delivery_register' %}" class="vet-btn">Delivery Boy</a>
+
         </div>
         {% endblock %}
     </body>
