--- a/DairyProject/templates/v_register.html
+++ b/DairyProject/templates/v_register.html
@@ -263,6 +263,11 @@
                     <div class="error-message" id="confirmpasswordError"></div>
                 </div>
                 <div class="form-group">
+                    <label for="started_year"></label>
+                    <input type="date" name="started_year" id="started_year" placeholder="Start Year" required>
+                    <div class="error-message" id="startedYearError"></div>
+                </div>
+                <div class="form-group">
                     <label for="specialization">Specialization:</label>
                     <select name="specialization" id="specialization">
                         <option value="Bovine Practitioner">Bovine Practitioner</option>
