--- a/DairyProject/templates/select.html
+++ b/DairyProject/templates/select.html
@@ -57,6 +57,24 @@
             .customer-btn:hover {
                 background-color: #0056b3;
             }
+            .del-btn {
+                background-image: url("{% static 'img/delivery.png' %}");
+                background-size: cover;
+                background-repeat: no-repeat;
+                background-color: transparent;
+                color: #fff;
+                padding: 100px 100px;
+                border-radius: 50%;
+                margin: 10px;
+                font-weight: bold;
+                text-transform: uppercase;
+                transition: background-color 0.3s;
+                text-decoration: none;
+            }
+        
+            .del-btn:hover {
+                background-color: #0056b3;
+            }
         
             /* Style for the Veterinarian button */
             .vet-btn {
@@ -87,7 +105,7 @@
             <a href="{% url 's_register' %}" class="seller-btn">Seller</a>
             <a href="{% url 'c_register' %}" class="customer-btn">Customer</a>
             <a href="{% url 'v_register' %}" class="vet-btn">Veterinarian</a>
-            <a href="{% url 'delivery_register' %}" class="vet-btn">Delivery Boy</a>
+            <a href="{% url 'delivery_register' %}" class="del-btn">Delivery Boy</a>
 
         </div>
         {% endblock %}
