--- a/DairyProject/templates/layout/main.html
+++ b/DairyProject/templates/layout/main.html
@@ -34,6 +34,7 @@
 <!-- Navbar Start -->
 {% include 'inc/navbar.html' %}
 <!-- Navbar End -->
+
   <center> 
 {% block body %}
   </center>
@@ -42,7 +43,7 @@
         <div id="header-carousel" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img class="w-100" src="{% static '/img/6.jpg' %}" alt="Image">
+                    <img class="w-100" src="{% static '/img/milk1.jpg' %}" alt="Image" style="object-fit: cover; height: 90vh;">
                     <div class="carousel-caption">
                         <div class="container">
                             <div class="row justify-content-start">
@@ -59,6 +60,19 @@
             </div>
         </div>
     </div>
+
+<h3>Our Services</h3><div class="container-fluid px-0">
+    <div class="scrolling-images-container">
+        <img src="{% static 'img/a.jpeg' %}" alt="Image 1" class="scrolling-image">
+        <img src="{% static 'img/b.jpeg' %}" alt="Image 2" class="scrolling-image">
+        <img src="{% static 'img/c.jpeg' %}" alt="Image 3" class="scrolling-image">
+        <img src="{% static 'img/d.jpg' %}" alt="Image 4" class="scrolling-image">
+        <img src="{% static 'img/e.jpg' %}" alt="Image 4" class="scrolling-image">
+        <img src="{% static 'img/f.jpg' %}" alt="Image 4" class="scrolling-image">
+        <img src="{% static 'img/f1.jpg' %}" alt="Image 4" class="scrolling-image">
+        <img src="{% static 'img/g.jpg' %}" alt="Image 4" class="scrolling-image">
+    </div>
+</div>
     <!-- Footer Start -->
     <div class="container-fluid bg-light  footer mt-5 py-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container py-5">
@@ -132,5 +146,29 @@
     <script src="{% static '/lib/lightbox/js/lightbox.min.js' %}"></script>
     <!-- Template Javascript -->
     <script src="{% static '/js/main.js' %}"></script>
+    <style>
+        .scrolling-images-container {
+            display: flex;
+            animation: scrolling-images 10s linear infinite; /* Adjust the duration and timing function as needed */
+            margin-top: 20px;
+            margin-bottom: 20px;
+        }
+
+        .scrolling-image {
+            width: 300px; /* Adjust the width as needed */
+            height: auto;
+            margin-right: 10px;
+        }
+
+        @keyframes scrolling-images {
+            0% {
+                transform: translateX(0);
+            }
+
+            100% {
+                transform: translateX(-100%);
+            }
+        }
+    </style>
 </body>
 </html>
