--- a/DairyProject/templates/admin/all_milk_details.html
+++ b/DairyProject/templates/admin/all_milk_details.html
@@ -1,5 +1,21 @@
+<!-- all_milk_details.html -->
 <div>
-  <h1>All Milk Details</h1>
+    <h1>All Milk Details</h1>
+    <td><a href="{% url 'milk_parameters' %}">Normal Milk Count</a></td> <!-- Link to detailed view -->
+    <form method="get">
+        <label for="date">Select Date:</label>
+        <input type="date" name="date" id="date">
+
+        <label for="seller">Select Seller:</label>
+        <select name="seller" id="seller">
+            <option value="">-- All Sellers --</option>
+            {% for seller in sellers %}
+                <option value="{{ seller.name }}">{{ seller.name }}</option>
+            {% endfor %}
+        </select>
+
+        <button type="submit">Filter</button>
+    </form>
   <a href="{% url 'add_milk_details' %}">
       <button>Add Milk Details</button>
   </a>
