--- a/DairyProject/templates/v_register.html
+++ b/DairyProject/templates/v_register.html
@@ -1,16 +1,13 @@
 {% extends 'layout/main.html' %}
 {% load static %}
-
 {% block body %}
+
 <style>
     body {
         font-family: 'Arial', sans-serif;
         background-color: #f5f5f5;
         margin: 0;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 100vh;
+        
     }
 
     .registration-container {
@@ -99,6 +96,14 @@
         margin-top: 5px;
         text-align: left;
     }
+    /* Add this to your existing styles */
+nav {
+    background-color: #333;
+    color: #fff;
+    text-align: center;
+    padding: 10px 0;
+}
+
 </style>
 
     <script>
