--- a/DairyProject/templates/layout/main.html
+++ b/DairyProject/templates/layout/main.html
@@ -80,8 +80,8 @@
                 <div class="col-lg-3 col-md-6">
                     <h5 class="text-blue mb-4">Our Office</h5>
                     <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>123 Street, Kottayam, Kerala</p>
-                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>6238097111</p>
-                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>dairysync@gmail.com</p>
+                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+916238097126</p>
+                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>dairysyncsociety@gmail.com</p>
                     <div class="d-flex pt-3">
                         <a class="btn btn-square btn-secondary rounded-circle me-2" href=""><i class="fab fa-twitter"></i></a>
                         <a class="btn btn-square btn-secondary rounded-circle me-2" href=""><i class="fab fa-facebook-f"></i></a>
@@ -132,8 +132,10 @@
     </div>
     <!-- Copyright End -->
     {% endblock body %}
-    <!-- Back to Top -->
-    <a href="#" class="btn btn-lg btn-primary btn-lg-square rounded-circle back-to-top"><i class="bi bi-arrow-up"></i></a>
+    <div class="profile-pic-container">
+        <img src="{% static 'img/d.jpeg' %}" alt="Profile Picture" class="profile-pic">
+    </div>    
+    <a target="_blank" href="https://wa.me/6238097126" class="btn btn-lg btn-primary btn-lg-square rounded-circle whatsapp-icon"><i class="fab fa-whatsapp"></i></a>
     <!-- JavaScript Libraries -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js "></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js "></script>
@@ -169,6 +171,44 @@
                 transform: translateX(-100%);
             }
         }
+        /* Additional CSS for WhatsApp icon */
+.whatsapp-icon {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    background-color: #25d366; /* WhatsApp green color */
+    color: #fff;
+    border: none;
+    outline: none;
+    cursor: pointer;
+}
+.profile-pic-container {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    display: none; /* Hide the profile picture by default */
+}
+
+.profile-pic {
+    width: 50px; /* Set the width of the profile picture */
+    height: 50px; /* Set the height of the profile picture */
+    border-radius: 50%; /* Make the profile picture round */
+}
     </style>
 </body>
+<script>
+    document.addEventListener('DOMContentLoaded', function () {
+        var arrowButton = document.querySelector('.back-to-top');
+        var profilePicContainer = document.querySelector('.profile-pic-container');
+
+        arrowButton.addEventListener('mouseenter', function () {
+            profilePicContainer.style.display = 'block';
+        });
+
+        arrowButton.addEventListener('mouseleave', function () {
+            profilePicContainer.style.display = 'none';
+        });
+    });
+</script>
+
 </html>
