--- a/DairyProject/templates/select.html
+++ b/DairyProject/templates/select.html
@@ -3,111 +3,81 @@
 
 <!DOCTYPE html>
 <html>
-    {% block body %}     
-    <head>
-        <style>
-            body {
-                background-image: url("{% static 'img/7.jpg' %}");
-                background-size: cover;
-                background-repeat: no-repeat;
-                background-attachment: fixed;
-            }
-        
-            .button-container {
-                text-align: center;
-                padding-top: 100px;
-            }
-        
-            /* Style for the Seller button */
-            .seller-btn {
-                background-image: url("{% static 'img/farmer.jpg' %}");
-                background-size: cover;
-                background-repeat: no-repeat;
-                background-color: transparent;
-                color: #fff;
-                padding: 100px 100px;
-                border-radius: 50%;
-                margin: 10px;
-                font-weight: bold;
-                text-transform: uppercase;
-                transition: background-color 0.3s;
-                text-decoration: none;
-            }
-        
-            .seller-btn:hover {
-                background-color: #0056b3;
-            }
-        
-            /* Style for the Customer button */
-            .customer-btn {
-                background-image: url("{% static 'img/customer.jpg' %}");
-                background-size: cover;
-                background-repeat: no-repeat;
-                background-color: transparent;
-                color: #fff;
-                padding: 100px 100px;
-                border-radius: 50%;
-                margin: 10px;
-                font-weight: bold;
-                text-transform: uppercase;
-                transition: background-color 0.3s;
-                text-decoration: none;
-            }
-        
-            .customer-btn:hover {
-                background-color: #0056b3;
-            }
-            .del-btn {
-                background-image: url("{% static 'img/delivery.png' %}");
-                background-size: cover;
-                background-repeat: no-repeat;
-                background-color: transparent;
-                color: #fff;
-                padding: 100px 100px;
-                border-radius: 50%;
-                margin: 10px;
-                font-weight: bold;
-                text-transform: uppercase;
-                transition: background-color 0.3s;
-                text-decoration: none;
-            }
-        
-            .del-btn:hover {
-                background-color: #0056b3;
-            }
-        
-            /* Style for the Veterinarian button */
-            .vet-btn {
-                background-image: url("{% static 'img/vet.jpg' %}");
-                background-size: cover;
-                background-repeat: no-repeat;
-                background-color: transparent;
-                color: #fff;
-                padding: 100px 100px;
-                border-radius: 50%;
-                margin: 10px;
-                font-weight: bold;
-                text-transform: uppercase;
-                transition: background-color 0.3s;
-                text-decoration: none;
-            }
-        
-            .vet-btn:hover {
-                background-color: #0056b3;
-            }
-        </style>
-        
-    </head>
-    <body>
-        <center><h1>What's your role?</h1></center>
+{% block body %}     
+<head>
+    <style>
+        body {
+            background-image: url("{% static 'img/a1.jpg' %}");
+            object-fit: cover; 
+            height: 90vh;
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+        }
 
-        <div class="button-container">
-            <a href="{% url 's_register' %}" class="seller-btn">Seller</a>
-            <a href="{% url 'c_register' %}" class="customer-btn">Customer</a>
-            <a href="{% url 'v_register' %}" class="vet-btn">Veterinarian</a>
-            <a href="{% url 'delivery_register' %}" class="del-btn">Delivery Boy</a>
+        .button-container {
+            text-align: center;
+            padding-top: 100px;
+        }
 
+        /* Style for the buttons */
+        .btn {
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-color: transparent;
+            color: #fff;
+            padding: 30px 50px;
+            border-radius: 50%;
+            margin: 10px;
+            font-weight: bold;
+            text-transform: uppercase;
+            transition: background-color 0.3s;
+            text-decoration: none;
+        }
+
+        .btn:hover {
+            background-color: whitesmoke;
+        }
+    </style>
+</head>
+<body>
+    <center><h1>What's your role?</h1></center>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4">
+                <a href="{% url 's_register' %}" class="btn">
+                    <img src="{% static 'img/farmer.jpg' %}" alt="Seller" width="150">
+                    Seller
+                </a>
+            </div>
+            <div class="col-md-4 offset-md-4">
+                <a href="{% url 'delivery_register' %}" class="btn">
+                    <img src="{% static 'img/delivery.png' %}" alt="Delivery Boy" width="150">
+                    Delivery Boy
+                </a>
+            </div>
         </div>
-        {% endblock %}
-    </body>
+        <div class="row">
+            <div class="col-md-3 offset-md-3">
+                <a href="{% url 'c_register' %}" class="btn">
+                    <img src="{% static 'img/customer.jpg' %}" alt="Customer" width="150">
+                    Customer
+                </a>
+            </div>
+            <div class="col-md-3 offset-md-3">
+                <a href="{% url 'v_register' %}" class="btn">
+                    <img src="{% static 'img/vet.jpg' %}" alt="Veterinarian" width="150">
+                    Veterinarian
+                </a>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-6 offset-md-3">
+                <!-- You can leave this column empty or add content as needed -->
+            </div>
+        </div>
+    </div>
+</body>
 </html>
+{% endblock %}
